Fix
-Fixed About Image overlap

--- a/style.css
+++ b/style.css
@@ -305,6 +305,10 @@ nav ul li.dropdown {
   width:  50%;
   padding-left:20px;  
 }
+.about-img img{
+  max-width: 100%;
+  max-height:100%;
+}
 footer{
   background-color: #333;
   color:#fff;
